# librdr3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: blockmap.h  blockmap.hpp  bstream.h  drawable.h  drawable.hpp  drawabledata.hpp  drawabledictionary.hpp  drawabledictionarydata.hpp  libdrawable.h  libdrawable.hpp  librdr3.hpp  loddata.h  loddata.hpp  math.hpp  shaderdata.hpp  shadergroup.h  shadernames.hpp  shaderparamnames.hpp  skeleton.hpp  skeletondata.hpp  stream.h  types.h  vertexdata.h  vertexdata.hpp
include/audio/: audiostreaminfo.hpp  awc.hpp
include/collision/: collisiondata.hpp
include/crypto/: cipher.hpp  crc.hpp  crypto.hpp  hashes.hpp  keys.hpp  secret.hpp  stridedcipher.hpp  tfit.hpp  tfit2.hpp
include/drawable/: drawable.hpp  drawabledata.hpp  drawabledictionary.hpp  drawabledictionarydata.hpp  loddata.hpp  shaderdata.hpp  skeleton.hpp  skeletondata.hpp  vertexdata.hpp
include/fs/: deflate.hpp  fs.hpp  fsdevice.hpp  oodle.hpp  rpf8.hpp
include/level/: entitydef.hpp  mapdata.hpp
include/misc/: heightmap.hpp
include/navmesh/: navmesh.hpp  navmeshdata.hpp  quadtree.hpp  splitarray.hpp
include/schema/: psoio.hpp  schema.hpp  schemaclass.hpp  schemadatablock.hpp  schemaenum.hpp  schemafield.hpp
include/util/: bstream.h  callback.hpp  math.hpp  scanner.h  streamutil.hpp  util.hpp
include/ynv/: navattribute.hpp  navmesh.hpp  navmeshdata.hpp  quadtree.hpp  splitarray.hpp
src/: blockmap.c  blockmap.cpp  bstream.cpp  drawable.c  drawable.cpp  drawabledata.cpp  drawabledictionarydata.cpp  libdrawable.cpp  librdr3.cpp  loddata.c  loddata.cpp  shaderdata.cpp  shadergroup.c  skeletondata.cpp  stream.c  vertexdata.c  vertexdata.cpp
src/audio/: audiostreaminfo.cpp  awc.cpp
src/crypto/: crc.cpp  crypto.cpp  keys.cpp  secret.cpp  stridedcipher.cpp  tfit.cpp  tfit2.cpp
src/drawable/: drawabledata.cpp  drawabledictionarydata.cpp  (+4 more)
test/: main.c  main.cpp
(+22 files in other folders)
